add question to survey

--- a/webapp/src/web/templates/visualize.html
+++ b/webapp/src/web/templates/visualize.html
@@ -128,6 +128,7 @@
             <p>1: {{agent_1}}</p>
             <p>cooperative: {{cooperative}}</p>
             <p>humanlike: {{humanlike}}</p>
+            <p>confidence: {{confidence}}</p>
             <p>comments: {{comments}}</p>
             {% endif %}
             <br>
