--- a/webapp/src/web/templates/task_survey.html
+++ b/webapp/src/web/templates/task_survey.html
@@ -18,14 +18,16 @@
     function ensureAllAnswered(){
         coopVal = $("#cooperative").val();
         humanVal = $("#humanlike").val();
+        confidenceVal = $("#confidence").val();
         comments = $("#comments").val();
         
-        if (humanVal == null | coopVal == null){
+        if (humanVal == null | coopVal == null | confidenceVal == null){
             return false;
         }
         else{
             questionAnswers["humanlike"] = humanVal;
             questionAnswers["cooperative"] = coopVal;
+            questionAnswers["confidence"] = confidenceVal;
             if(comments == null) {
             	comments = "";
             }
@@ -105,7 +107,7 @@
             <p style="text-align:center;">How <strong>cooperative</strong> was your partner?</p> <br>
             <form id="q_s">
                 <p style="float:left;">Not cooperative at all</p>
-                <input type="range" id="cooperative" min="1" max="5" style="width:50%; margin-left:13%" >
+                <input type="range" id="cooperative" min="1" max="5" value="3" style="width:50%; margin-left:6.5%" >
                 <p style="float:right;">Very cooperative</p>
             </form>
         </div>
@@ -116,8 +118,19 @@
             <p style="text-align:center;">How <strong>human-like</strong> was your partner?</p> <br>
             <form id="q_h">
                 <p style="float:left;">Not human-like at all</p>
-                <input type="range" id="humanlike" min="1" max="5" style="width:50%; margin-left:11%;" >
+                <input type="range" id="humanlike" min="1" max="5" value="3" style="width:50%; margin-left:7%;" >
                 <p style="float:right;">Very human-like</p>
+            </form>
+        </div>
+        
+        <br> <br>
+
+        <div class="q">
+            <p style="text-align:center;">How <strong>confident</strong> are you that you both picked the same dot?</p> <br>
+            <form id="q_c">
+                <p style="float:left;">Not very confident</p>
+                <input type="range" id="confidence" min="1" max="5" value="3" style="width:50%; margin-left:8.7%;" >
+                <p style="float:right;">Very confident</p>
             </form>
         </div>
         
