add inference args and minor chat updates

--- a/webapp/src/web/templates/chat.html
+++ b/webapp/src/web/templates/chat.html
@@ -343,14 +343,14 @@
                   </div>
                   <div class="modal-body">
                      <h4>Example Scenario:</h4>
-                     <img height="400" width="400" src="{{ url_for('static', filename='img/')}}sample.jpg"/>
+                     <img height="400" width="400" src="{{ url_for('static', filename='img/')}}sample_colored.png"/>
                      <h4>Example Conversation:</h4>
                      <ul style="list-style-type:none">
-                        <li> <span style="color:#009933">Player1:</span> I see a lonely light gray dot. </li>
+                        <li> <span style="color:#0000FF">Player1:</span> I see a lonely light gray dot. </li>
                         <li> <span style="color:#FF0000">Player2:</span> I don't think I see it. </li>
-                        <li> <span style="color:#009933">Player1:</span> Ok, then do you see two dark dots. </li>
+                        <li> <span style="color:#0000FF">Player1:</span> Ok, then do you see two dark dots. </li>
                         <li> <span style="color:#FF0000">Player2:</span> Is the lower one slightly larger? </li>
-                        <li> <span style="color:#009933">Player1:</span> Yes, they are almost vertical. </li>
+                        <li> <span style="color:#0000FF">Player1:</span> Yes, they are almost vertical. </li>
                         <li> <span style="color:#FF0000">Player2:</span> Let's choose the lower one! </li>
                      </ul>
                   </div>
