cuda off by default, and update instructions

--- a/webapp/src/web/templates/chat.html
+++ b/webapp/src/web/templates/chat.html
@@ -339,7 +339,7 @@
                <div class="modal-content">
                   <div class="modal-header">
                         <p id="modal_instruction"></p>
-                        <p>You and another user online should have 7 objects in view. However, your view is centered slightly differently from your partner's, and only some objects are in common. Your goal is <span style="color:#009933"> to chat with your partner and find one object you have in common!</span></p>
+                        <p>You'll be paired with a partner. You and your partner can both see 7 objects in your view. However, your view is centered slightly differently from your partner's, and only some objects are in common. Your goal is <span style="color:#009933"> to chat with your partner and find one object you have in common!</span></p>
                   </div>
                   <div class="modal-body">
                      <h4>Example Scenario:</h4>
