--- a/webapp/src/web/templates/instructions.html
+++ b/webapp/src/web/templates/instructions.html
@@ -1,16 +1,24 @@
 <h3>Your Goal</h3>
-<p>You and another user online should have 7 objects in view. However, your view is centered slightly differently from your partner's, and only some objects are in common. Your goal is to <span style="color:#009933">chat with your partner and find one object you have in common!</span></p> 
+<p>You're paired with a partner. You and your partner each have 7 objects in view. However, your view is centered slightly differently from your partner's, and only some objects are in common. Your goal is to <span style="color:#009933">chat with your partner and find one object you have in common!</span></p> 
 <h3>Instructions</h3>
 <ul>
     <li>Look at <b> your view on the right</b>. </li>
-    <li>Use the <b>chat box below</b> to find one object you and your partner have in common. </li>
-    <li>Please use <b style="color:#009933">natural sentences</b> as much as possible! </li>
+    <li>You and your partner will take turns, and try to agree on one dot that you both have in common.</li>
+    <li>In a turn, you can type a message in the <b> chat box below</b> and press Enter to send it, or <b>click a dot to select it</b>. </li>
+    <li>You can select anytime after 1 minute, but <b style="color:#009933">try to make sure you found one object in common!</b> </li>
+    <li>Your partner will not see which dot you select, and you won't see their selection, so try to communicate well in the messages! </li>
+    <li>Please use <b style="color:#009933">natural sentences</b> as much as possible, and do not talk about things that are irrelevant to the task. </li>
+    <!--
+    <ul>
+        <li style="color:#FF0000"> Do not talk about things that are irrelevant to this task. </li>
+        <li style="color:#FF0000"> Do not use complicated numbers (e.g. 11:59, 1.5cm, 75%). </li>
+    </ul>
     <ul>
         <li style="color:#009933"> Try to describe your view and ask questions in many ways. </li>
         <li style="color:#FF0000"> Do not use complicated numbers (e.g. 11:59, 1.5cm, 75%). </li>
         <li style="color:#FF0000"> Do not talk about things that are irrelevant to this task. </li>
     </ul>
-    <li>Finally, <b>click one object in your view</b> that you found in common. You can select anytime after 1 minute, but <b style="color:#009933">make it very sure you found one object in common!</b> </li>
-    <li><b style="color:#FF0000">Please be aware that we will not accept chats which (i) did not follow instructions (ii) did not make good attempt to succeed</b>. If you find problems with the task or your partner, <b> please return and do not submit that HIT</b>. We give additional $0.05 bonus if you successfully find one object in common.</li>
+    -->
+    <li><b style="color:#FF0000">Please be aware that we will not accept chats which (i) did not follow instructions or (ii) did not make a good attempt to succeed</b>. If you find problems with the task, <b> please return and do not submit that HIT</b>. We give an additional $0.05 bonus if you and your partner successfully find one object in common.</li>
 </ul>
 </ul>
