--- a/webapp/src/web/templates/instructions.html
+++ b/webapp/src/web/templates/instructions.html
@@ -1,5 +1,8 @@
+<!--
 <h3>Your Goal</h3>
 <p>You're paired with a partner. You and your partner each have 7 objects in view. However, your view is centered slightly differently from your partner's, and only some objects are in common. Your goal is to <span style="color:#009933">chat with your partner and find one object you have in common!</span></p> 
+-->
+<div align="left"> <button onclick="showModal()" >Show Task Overview Again</button> </div>
 <h3>Instructions</h3>
 <ul>
     <li>Look at <b> your view on the right</b>. </li>
