better task completion codes, and add survey

--- a/webapp/src/web/templates/task_survey.html
+++ b/webapp/src/web/templates/task_survey.html
@@ -137,7 +137,7 @@
         <br> <br>
         
         <div class="q">
-        	<p style="text-align:center;">(optional) Please add any comments/feedback related to the dialogue below. (for e.g., comments on how we can improve this platform, why you made the above ratings, etc.)</p>
+        	<p style="text-align:center;">(optional) Please feel free to leave any comments related to the dialogue below. </p>
         	<form id="q_comm">
         	<textarea id="comments" cols="100" rows="5"></textarea>
         	</form>
