--- a/webapp/src/web/templates/chat.html
+++ b/webapp/src/web/templates/chat.html
@@ -84,10 +84,10 @@
          {% if not debug %}
             var read_time = 1000; // milliseconds
             //var select_time = read_time; // milliseconds
-            var select_time = 30000; // milliseconds
+            var select_time = 60000; // milliseconds
          {% else %}
             var read_time = 1000;  // In peek/debug mode, skip it
-            var select_time = 30000;
+            var select_time = 60000;
          {% endif %}
          $(document).ready(function(){
          	$('#description').modal({backdrop: 'static', keyboard: true});
@@ -170,7 +170,7 @@
                   selectTime = now;
                   select(selected);
                } else {
-                  window.alert("Please play 30s before selecting a dot.")
+                  window.alert("Please play for least one minute before selecting a dot.")
                }
          	} else {
          	  window.alert("You've already selected a dot in this game.");
