--- a/webapp/src/web/templates/instructions.html
+++ b/webapp/src/web/templates/instructions.html
@@ -7,10 +7,13 @@
 <ul>
     <li>Look at <b> your view on the right</b>. </li>
     <li>You and your partner will take turns, and try to agree on one dot that you both have in common.</li>
+    <li> We will give you <b style="color:#009933">an additional $0.15 bonus</b> if you and your partner successfully find one object in common. </li>
+    <ul>
     <li>In a turn, you can type a message in the <b> chat box below</b> and press Enter to send it, or <b>click a dot to select it</b>. </li>
-    <li>You can select anytime after 1 minute, but <b style="color:#009933">try to make sure you found one object in common!</b> </li>
     <li>Your partner will not see which dot you select, and you won't see their selection, so try to communicate well in the messages! </li>
-    <li>Please use <b style="color:#009933">natural sentences</b> as much as possible, and do not talk about things that are irrelevant to the task. </li>
+    <li>You can select anytime after 1 minute, but <b style="color:#009933">make very sure that you found one object in common!</b> </li>
+    <li>Please use natural sentences as much as possible, and do not talk about things that are irrelevant to the task. </li>
+    </ul>
     <!--
     <ul>
         <li style="color:#FF0000"> Do not talk about things that are irrelevant to this task. </li>
@@ -22,6 +25,6 @@
         <li style="color:#FF0000"> Do not talk about things that are irrelevant to this task. </li>
     </ul>
     -->
-    <li><b style="color:#FF0000">Please be aware that we will not accept chats which (i) did not follow instructions or (ii) did not make a good attempt to succeed</b>. If you find problems with the task, <b> please return and do not submit that HIT</b>. We give an additional $0.05 bonus if you and your partner successfully find one object in common.</li>
+    <li><b style="color:#FF0000">Please be aware that we will not accept chats which (i) did not follow instructions or (ii) did not make a good attempt to succeed</b>. If you find problems with the task, <b> please return and do not submit that HIT</b>.</li>
 </ul>
 </ul>
