--- a/webapp/src/web/templates/visualize.html
+++ b/webapp/src/web/templates/visualize.html
@@ -126,9 +126,10 @@
             <h4>Survey Result</h4>
             <p>0: {{agent_0}}</p>
             <p>1: {{agent_1}}</p>
-            <p>cooperative: {{cooperative}}</p>
             <p>humanlike: {{humanlike}}</p>
             <p>confidence: {{confidence}}</p>
+            <p>understand you: {{understand_you}}</p>
+            <p>understand them: {{understand_them}}</p>
             <p>comments: {{comments}}</p>
             {% endif %}
             <br>
