--- a/webapp/src/web/templates/waiting.html
+++ b/webapp/src/web/templates/waiting.html
@@ -77,7 +77,8 @@
                 <h2>{{title}}</h2>
                 <h3>{{ waiting_message }}</h3>
 
-                <h4>Make sure you have read the instructions carefully, as the task is timed and the clock will start immediately once you are paired. </h4>
+                <!-- <h4>Make sure you have read the instructions carefully, as the task is timed and the clock will start immediately once you are paired. </h4> -->
+                <h4>The estimated maximum waiting time is 3 minutes.</h4>
             </div>
         </div>
     </div>
