always assign to a waiting human, and active user checks

--- a/webapp/src/web/templates/chat_list.html
+++ b/webapp/src/web/templates/chat_list.html
@@ -58,6 +58,9 @@
 </head>
 <body>
   <button type="button" id="zero_active" onclick="zero_active()">Zero Active Scenarios</button><p id='zero_active_result'></p> <br>
+  <br>
+  num active users: {{num_active_users}}
+  <br>
   <table class="stat">
     <tr>
       <th>overall</th>
