edit app params and instructions

--- a/webapp/src/web/templates/instructions.html
+++ b/webapp/src/web/templates/instructions.html
@@ -7,7 +7,9 @@
 <ul>
     <li>Look at <b> your view on the right</b>. </li>
     <li>You and your partner will take turns, and try to agree on one dot that you both have in common.</li>
-    <li> We will give you <b style="color:#009933">an additional $0.15 bonus</b> if you and your partner successfully find one object in common. </li>
+    <li> We will give you <b style="color:#009933">an additional $0.25 bonus</b> if you and your partner successfully find one object in common. </li>
+    <li> You will be playing with a human or robot.</li>
+    <li> The robot may be a bit ambiguous. Say yes if their question applies to any dots! </li>
     <ul>
     <li>In a turn, you can type a message in the <b> chat box below</b> and press Enter to send it, or <b>click a dot to select it</b>. </li>
     <li>Your partner will not see which dot you select, and you won't see their selection, so try to communicate well in the messages! </li>
