--- a/webapp/src/web/templates/instructions.html
+++ b/webapp/src/web/templates/instructions.html
@@ -8,13 +8,14 @@
     <li>Look at <b> your view on the right</b>. </li>
     <li>You and your partner will take turns, and try to agree on one dot that you both have in common.</li>
     <li> You will be playing with a human or robot.</li>
-    <ul>
-    <li> The robot may be a bit ambiguous. Say yes if their question applies to any group of dots. But make sure you see all dots described! </li>
-    <li> The robot may mention pairs or groups of dots that are far apart, or have other unmentioned dots between them. </li>
-    <li> The robot uses the relative position of dots to each other, rather than the absolute position within their circle/view </li>
-    <li> The robot may repeat itself if it did not get a yes/no answer. Try to answer it with yes or no. </li>
-    </ul>
     <li> We will give you <b style="color:#009933">an additional $0.15 bonus</b> if you and your partner successfully find one object in common. </li>
+    <ul>
+    <li> Robost may be a bit ambiguous. Say yes if their question applies to any group of dots. But make sure you see all dots described! </li>
+    <li> Robots use the relative position of dots to each other, rather than the absolute position. </li>
+    <li> Robots may mention pairs or groups of dots that are far apart. </li>
+    <li> Robots may repeat themselves if they did not get a yes/no answer. Try to answer it with yes or no. </li>
+    <li> Robots may be stubborn. In this case, we will award the $0.15 bonus if you make a good effort, even if you do not win!
+    </ul>
     <ul>
     <li>In a turn, you can type a message in the <b> chat box below</b> and press Enter to send it, or <b>click a dot to select it</b>. </li>
     <li>Your partner will not see which dot you select, and you won't see their selection, so try to communicate well in the messages! </li>
