add new human batch

--- a/webapp/src/web/templates/finished.html
+++ b/webapp/src/web/templates/finished.html
@@ -35,7 +35,7 @@
     {% endif %}
 -->
 
-		{% if mturk_code is not none %}
+		{% if mturk_code is not none and completed %}
 		<hr>
 
 		<h3>Thanks for completing this HIT! Please copy and paste this code into the HIT on Mechanical Turk:</h3>
